objects/ssot__OfferProductCategory__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceName__c</fullName>
        <label>Data Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Offer Product Category Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OfferId__c</fullName>
        <label>Offer</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductCategoryId__c</fullName>
        <label>Product Category</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modified Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752200987547_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OfferProductCategory_OfferId_map_Off_rel</label>
        <referenceTo>ssot__Offer__dlm</referenceTo>
        <relationshipLabel>OfferProductCategory_OfferId_map_Off_rel</relationshipLabel>
        <relationshipName>rel_1752200987547_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752201103528_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OfferProductCategory_ProductCategory_rel</label>
        <referenceTo>ssot__ProductCategory__dlm</referenceTo>
        <relationshipLabel>OfferProductCategory_ProductCategory_rel</relationshipLabel>
        <relationshipName>rel_1752201103528_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>